deploy/manifests/apps/web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    istio-injection: enabled
